--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   height: 100vh;
 }
 
+.left-component {
+  display: grid;
+  grid-column: 1/4;
+  grid-row: 2/6;
+  justify-content: space-around;
+}
+
+.right-component {
+  display: grid;
+  grid-column: 6/8;
+  grid-row: 2/5;
+}
 .App h1 {
   display: grid;
   grid-column: 3/7;
@@ -17,6 +29,9 @@
   grid-row: 2/6;
   grid-column: 1/3;
   justify-content: center;
+  background-color: white;
+  border-radius: 12px;
+  padding: 20px 0;
 }
 
 .select-icon span {
@@ -28,48 +43,57 @@
 }
 
 .input-add-group {
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 
 .input-add-group label {
   margin-top: 60px;
-  color: #e5e5e5;
+  color: #7209b7;
   text-align: right;
 }
 
 .input-add-group input {
-  padding: 8px;
+  padding: 8px 3px 8px 35px;
   margin-top: px;
-  background-color: #e5e5e5;
+  background-color: white;
   font-family: "vazir";
+  color: #7209b7;
+  font-size: 15px;
   outline: none;
+  border: 2px solid rgba(0, 0, 0, 0.685);
   text-align: right;
-  border: 1px solid;
   border-radius: 3px;
+}
+.input-add-group input:focus {
+  border: 2px solid #8518ce;
 }
 
 .btn {
-  padding: 2px;
+  padding: 3px;
   cursor: pointer;
-  background-color: #e5e5e5;
-  color: #14213d;
+  background-color: #7209b7;
+  color: white;
   font-size: 10px;
   font-family: "vazir";
-  border: 1px solid;
+  border: none;
   border-radius: 3px;
   width: 85px;
   margin-top: 5px;
 }
 
 .select-elements {
-  width: 150%;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .select-elements div {
   text-align: right;
+  color: #7209b7;
+}
+
+.select-elements div span {
+  color: #7209b7;
 }
 /* https://coolors.co/000000-14213d-fca311-e5e5e5-ffffff */
 
@@ -77,31 +101,135 @@
   background-color: #34a853;
 }
 
-/* .products-value {
+.show-products {
+  display: flex;
+  flex-direction: column;
+}
+
+.add-products {
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  display: grid;
+  grid-row: 2/5;
+}
+
+.products {
+  background-color: midnightblue;
+  border: 1px solid #234ae2;
+  color: #f9fafc;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 20% 80%;
+  border-radius: 10px;
+  padding: 8px;
+}
+
+.title {
   display: grid;
   grid-column: 1/3;
-  justify-content: center;
-  grid-row: 5/6;
+  grid-row: 1/2;
+  background-color: #050c3f;
   align-items: center;
-  color: #e9f1f7;
-  font-size: 16px;
-  margin-bottom: 65px;
 }
 
-.products-value label {
-  text-align: right;
-  width: 150%;
+.title:hover {
+  background-color: #4cc9f0;
+  text-shadow: 2px 3px 5px;
+  color: #050c3f;
+  border-radius: 5px;
+  overflow: hidden;
 }
-
-.products-value input {
+.title-category {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 8px;
-  background-color: #e5e5e5;
-  font-family: "vazir";
-  outline: none;
-  text-align: right;
-  border: 1px solid;
-  border-radius: 3px;
-  width: 150%;
-} */
+  justify-content: space-around;
+  grid-auto-flow: column;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #234ae2;
+  cursor: pointer;
+  align-items: center;
+}
+
+.title-category-name {
+  font-size: 25px;
+}
+
+.title-category-length {
+  background-color: #234ae2;
+  padding: 0px 5px;
+  display: grid;
+  border-radius: 20%;
+  align-items: center;
+  font-size: 12px;
+}
+
+.products-list {
+  display: grid;
+  grid-column: 1/3;
+  grid-row: 2/3;
+  border: 1px solid #234ae2;
+  background-color: #050c3f;
+  border-radius: 5px;
+  margin-top: 10px;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 15% 85%;
+}
+
+.title-products {
+  padding: 5px 0 0 0;
+  color: #9eaed0;
+  align-items: center;
+  display: grid;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  grid-auto-flow: column;
+  text-align: center;
+  font-size: 18px;
+}
+.products-total {
+  color: #9eaed0;
+  text-align: center;
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  align-items: center;
+  font-size: 18px;
+  padding: 5px 0 0 0;
+}
+
+.products-items {
+  color: #9eaed0;
+  display: grid;
+  grid-auto-flow: column;
+  border-bottom: 1px solid transparent;
+  margin: 0 5px;
+  border: 2px solid transparent;
+  font-size: 18px;
+}
+
+.products-items:hover {
+  cursor: pointer;
+  color: #7209b7;
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid #8518ce;
+}
+
+.products-name {
+  display: grid;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  text-align: center;
+  align-items: center;
+}
+
+.products-length {
+  align-items: center;
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  text-align: center;
+}
