--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   background-color: white;
   border-radius: 12px;
   padding: 20px 0;
+  border: 2px solid #8518ce;
 }
 
 .select-icon span {
@@ -117,8 +118,8 @@
 }
 
 .products {
-  background-color: midnightblue;
-  border: 1px solid #234ae2;
+  background-color: white;
+  border: 2px solid #8518ce;
   color: #f9fafc;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -132,14 +133,16 @@
   grid-column: 1/3;
   grid-row: 1/2;
   background-color: #050c3f;
+  border: 2px solid #8518ce;
+  border-radius: 5px;
   align-items: center;
 }
 
 .title:hover {
   background-color: #4cc9f0;
   text-shadow: 2px 3px 5px;
+  border: 2px solid #8518ce;
   color: #050c3f;
-  border-radius: 5px;
   overflow: hidden;
 }
 .title-category {
@@ -148,7 +151,6 @@
   grid-auto-flow: column;
   padding: 5px;
   border-radius: 5px;
-  border: 1px solid #234ae2;
   cursor: pointer;
   align-items: center;
 }
@@ -170,7 +172,7 @@
   display: grid;
   grid-column: 1/3;
   grid-row: 2/3;
-  border: 1px solid #234ae2;
+  border: 2px solid #8518ce;
   background-color: #050c3f;
   border-radius: 5px;
   margin-top: 10px;
